Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18605

QML examples not launching on Windows platform.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt3D TP1
    • 4.7.2
    • Qt3D
    • None
    • 63f522faff994d66c946378567f2f0673dc445e1

      While the QML examples work fine when loaded through the QML viewer, however, the executable launching version does not work.

      This is due to a problem in the path for the qml file in qmlres.h. The "QCoreApplication::applicationFilePath();" function returns directory separators which are incompatible with a later call to QDir::separator();

      Additionally, the current version doesn't take into account the ".exe" extension on Windows files.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dpope Daniel Pope (closed Nokia identity) (Inactive)
            dpope Daniel Pope (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes