Fixes for QTBUG-18605: problems with windows launch of QML files.